# math-server

./: .appveyor.yml  .clang-format  .dockerignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  appveyor.yml  docker-compose.yml
.appveyor/: build.ps1  test.ps1
.ci/: stress_test.sh
.github/workflows/: ci.yml
.travis/: build.sh  build_boost.sh
client/: CMakeLists.txt  Dockerfile  client.hpp  error.hpp  input.hpp  main.cpp  settings.hpp  transport.hpp
server/: CMakeLists.txt  Dockerfile  error.hpp  lexer.hpp  log.hpp  main.cpp  parser.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  settings.hpp
server/common/: CMakeLists.txt  error.hpp  log.hpp
server/lexer/: CMakeLists.txt  error.hpp  input.hpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp  token_type.cpp  token_type.hpp
server/lexer/details/: parse.cpp  parse.hpp
server/main/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  settings.hpp
server/parser/: CMakeLists.txt  error.hpp  operator.hpp  parser.hpp
test/: CMakeLists.txt  stress_test.py  stress_test.sh
test/benchmarks/: CMakeLists.txt  lexer.cpp
test/unit_tests/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp
